# libfec

./: .gitignore  CMakeLists.txt  INSTALL  README  README.md  config.h.in  configure  configure.in  cpu_features.s  cpu_mode_ppc.c  cpu_mode_unknown.c  cpu_mode_x86.c  decode_rs.c  decode_rs_int.c  dotprod.c  dotprod.h  dotprod_av.c  dotprod_mmx.c  dotprod_mmx_assist.s  dotprod_port.c  dotprod_sse2.c  dotprod_sse2_assist.s  dsp.3  dtest.c  encode_rs.c  encode_rs_av.c  encode_rs_int.c  exercise.c  fec.h  gen_ccsds_tal.c  init_rs.c  init_rs_int.c  int.h  lesser.txt  makefile.in  mmxbfly27.s  mmxbfly29.s  peak_mmx_assist.s  peak_sse2_assist.s  peak_sse_assist.s  (+56 more)
